@@ -11,17 +11,17 @@ import java.util.logging.Logger;
 
 public class ReadPerson {
 
-    private String query = "SELECT * FROM person WHERE id = ?";
-    private String query2 = "SELECT * FROM person";
-
     private static final Logger LOG = Logger.getLogger(ReadPerson.class.getName());
 
-    public Person getPerson(int id) throws SQLException {
+    public Person getPerson(long id) throws SQLException {
         try (Connection conn = ConnectManager.getConnection()) {
+            String query = "SELECT * FROM person WHERE id = ?";
             PreparedStatement stat = conn.prepareStatement(query);
-            stat.setInt(1, id);
+            stat.setLong(1, id);
             ResultSet rs = stat.executeQuery();
-            return populatePersonList(rs).get(0);
+            List<Person> people = populatePersonList(rs);
+            if (people.isEmpty()) return null;
+            return people.getFirst();
         } catch (SQLException e) {
             LOG.warning("SQLException thrown:\n" + e.getMessage());
             throw e;
@@ -32,6 +32,7 @@ public class ReadPerson {
         Connection conn = null;
         try {
             conn = ConnectManager.getConnection();
+            String query2 = "SELECT * FROM person";
             PreparedStatement stat = conn.prepareStatement(query2);
             //no need to set parameters now
             ResultSet rs = stat.executeQuery();
@@ -54,10 +55,7 @@ public class ReadPerson {
 
     private List<Person> populatePersonList(ResultSet rs) throws SQLException {
         List<Person> list = new ArrayList<>();
-        String id;
-        String firstName;
-        String lastName = null;
-        String ssn = null;
+        String id, firstName, lastName, ssn;
         while (rs.next()) {
             id = rs.getString("id").trim();
             firstName = rs.getString("firstname").trim();
@@ -66,5 +64,25 @@ public class ReadPerson {
             list.add(new Person(id, firstName, lastName, ssn));
         }
         return list;
+    }
+
+    // return the id of this person, -1 if error
+    public long savePerson(Person person) throws SQLException {
+        long id = System.currentTimeMillis() / 100;
+        String sql = "INSERT INTO person (id, firstname, lastname, ssn) VALUES (?, ?, ?, ?)";
+        try (Connection conn = ConnectManager.getConnection()) {
+            PreparedStatement stat = conn.prepareStatement(sql);
+            stat.setLong(1, id);
+            stat.setString(2, person.firstName());
+            stat.setString(3, person.lastName());
+            stat.setString(4, person.ssn());
+            int i = stat.executeUpdate();
+            LOG.info("Saved successfully" + i);
+            if (i > 0) return id;
+        } catch (SQLException e) {
+            LOG.warning("SQLException thrown:\n" + e.getMessage());
+            throw e;
+        }
+        return -1;
     }
 }
